--- a/docs/en/sql-reference/table-functions/s3.md
+++ b/docs/en/sql-reference/table-functions/s3.md
@@ -248,7 +248,6 @@ FROM s3(
 LIMIT 5;
 ```
 
-
 ## Working with archives
 
 Suppose that we have several archive files with following URIs on S3:
@@ -264,6 +263,16 @@ SELECT *
 FROM s3(
    'https://s3-us-west-1.amazonaws.com/umbrella-static/top-1m-2018-01-1{0..2}.csv.zip :: *.csv'
 );
+```
+
+## Presigned URL
+
+Presigned URLs are currently not supported. Use `url()` table function instead:
+```sql
+SELECT *
+FROM url(
+   'https://example.amazonaws.com/f.csv?X-Amz-Security-Token=[...]'
+)
 ```
 
 
