--- a/docs/ru/development/build-cross-loongarch.mdx
+++ b/docs/ru/development/build-cross-loongarch.mdx
@@ -1,8 +1,8 @@
 ---
 slug: /ru/development/build-cross-loongarch
 sidebar_position: 69
-sidebar_label: Build on Linux for LOONGARCH64
-title: Build on Linux for LOONGARCH64
+sidebar_label: Build on Linux for LoongArch64
+title: Build on Linux for LoongArch64
 ---
 
 import Content from '@site/docs/en/development/build-cross-loongarch.md';
