Update function return type for consistency

--- a/docs/en/sql-reference/functions/geo/s2.md
+++ b/docs/en/sql-reference/functions/geo/s2.md
@@ -26,9 +26,7 @@ geoToS2(lon, lat)
 
 **Returned values**
 
-- S2 point index.
-
-Type: [UInt64](../../../sql-reference/data-types/int-uint.md).
+- S2 point index. [UInt64](../../../sql-reference/data-types/int-uint.md).
 
 **Example**
 
@@ -62,9 +60,9 @@ s2ToGeo(s2index)
 
 **Returned values**
 
-- A tuple consisting of two values: `tuple(lon,lat)`.
-
-Type: `lon` — [Float64](../../../sql-reference/data-types/float.md). `lat` — [Float64](../../../sql-reference/data-types/float.md).
+- A [tuple](../../data-types/tuple.md) consisting of two values: 
+    - `lon`. [Float64](../../../sql-reference/data-types/float.md).
+    - `lat`. [Float64](../../../sql-reference/data-types/float.md).
 
 **Example**
 
@@ -98,9 +96,7 @@ s2GetNeighbors(s2index)
 
 **Returned values**
 
-- An array consisting of 4 neighbor indexes: `array[s2index1, s2index3, s2index2, s2index4]`.
-
-Type: [UInt64](../../../sql-reference/data-types/int-uint.md).
+- An array consisting of 4 neighbor indexes: `array[s2index1, s2index3, s2index2, s2index4]`. [Array](../../data-types/array.md)([UInt64](../../../sql-reference/data-types/int-uint.md)).
 
 **Example**
 
@@ -134,10 +130,8 @@ s2CellsIntersect(s2index1, s2index2)
 
 **Returned values**
 
-- 1 — If the cells intersect.
-- 0 — If the cells don't intersect.
-
-Type: [UInt8](../../../sql-reference/data-types/int-uint.md).
+- 1 — If the cells intersect. [UInt8](../../../sql-reference/data-types/int-uint.md).
+- 0 — If the cells don't intersect. [UInt8](../../../sql-reference/data-types/int-uint.md).
 
 **Example**
 
@@ -173,10 +167,8 @@ s2CapContains(center, degrees, point)
 
 **Returned values**
 
-- 1 — If the cap contains the S2 point index.
-- 0 — If the cap doesn't contain the S2 point index.
-
-Type: [UInt8](../../../sql-reference/data-types/int-uint.md).
+- 1 — If the cap contains the S2 point index. [UInt8](../../../sql-reference/data-types/int-uint.md).
+- 0 — If the cap doesn't contain the S2 point index. [UInt8](../../../sql-reference/data-types/int-uint.md).
 
 **Example**
 
@@ -211,8 +203,8 @@ s2CapUnion(center1, radius1, center2, radius2)
 
 **Returned values**
 
-- `center` — S2 point index corresponding the center of the smallest cap containing the two input caps. Type: [UInt64](../../../sql-reference/data-types/int-uint.md).
-- `radius` — Radius of the smallest cap containing the two input caps. Type: [Float64](../../../sql-reference/data-types/float.md).
+- `center` — S2 point index corresponding the center of the smallest cap containing the two input caps. [UInt64](../../../sql-reference/data-types/int-uint.md).
+- `radius` — Radius of the smallest cap containing the two input caps. [Float64](../../../sql-reference/data-types/float.md).
 
 **Example**
 
@@ -248,8 +240,8 @@ s2RectAdd(s2pointLow, s2pointHigh, s2Point)
 
 **Returned values**
 
-- `s2PointLow` — Low S2 cell id corresponding to the grown rectangle. Type: [UInt64](../../../sql-reference/data-types/int-uint.md).
-- `s2PointHigh` — Height S2 cell id corresponding to the grown rectangle. Type: [UInt64](../../../sql-reference/data-types/float.md).
+- `s2PointLow` — Low S2 cell id corresponding to the grown rectangle. [UInt64](../../../sql-reference/data-types/int-uint.md).
+- `s2PointHigh` — Height S2 cell id corresponding to the grown rectangle. [UInt64](../../../sql-reference/data-types/float.md).
 
 **Example**
 
@@ -321,8 +313,8 @@ s2RectUnion(s2Rect1PointLow, s2Rect1PointHi, s2Rect2PointLow, s2Rect2PointHi)
 
 **Returned values**
 
-- `s2UnionRect2PointLow` — Low S2 cell id corresponding to the union rectangle. Type: [UInt64](../../../sql-reference/data-types/int-uint.md).
-- `s2UnionRect2PointHi` — High S2 cell id corresponding to the union rectangle. Type: [UInt64](../../../sql-reference/data-types/int-uint.md).
+- `s2UnionRect2PointLow` — Low S2 cell id corresponding to the union rectangle. [UInt64](../../../sql-reference/data-types/int-uint.md).
+- `s2UnionRect2PointHi` — High S2 cell id corresponding to the union rectangle. [UInt64](../../../sql-reference/data-types/int-uint.md).
 
 **Example**
 
@@ -357,8 +349,8 @@ s2RectIntersection(s2Rect1PointLow, s2Rect1PointHi, s2Rect2PointLow, s2Rect2Poin
 
 **Returned values**
 
-- `s2UnionRect2PointLow` — Low S2 cell id corresponding to the rectangle containing the intersection of the given rectangles. Type: [UInt64](../../../sql-reference/data-types/int-uint.md).
-- `s2UnionRect2PointHi` — High S2 cell id corresponding to the rectangle containing the intersection of the given rectangles. Type: [UInt64](../../../sql-reference/data-types/int-uint.md).
+- `s2UnionRect2PointLow` — Low S2 cell id corresponding to the rectangle containing the intersection of the given rectangles. [UInt64](../../../sql-reference/data-types/int-uint.md).
+- `s2UnionRect2PointHi` — High S2 cell id corresponding to the rectangle containing the intersection of the given rectangles. [UInt64](../../../sql-reference/data-types/int-uint.md).
 
 **Example**
 
