Numbers in return type should be in ``

--- a/docs/en/sql-reference/functions/geo/s2.md
+++ b/docs/en/sql-reference/functions/geo/s2.md
@@ -94,7 +94,7 @@ s2GetNeighbors(s2index)
 
 - `s2index` — S2 Index. [UInt64](../../../sql-reference/data-types/int-uint.md).
 
-**Returned values**
+**Returned value**
 
 - An array consisting of 4 neighbor indexes: `array[s2index1, s2index3, s2index2, s2index4]`. [Array](../../data-types/array.md)([UInt64](../../../sql-reference/data-types/int-uint.md)).
 
@@ -128,10 +128,10 @@ s2CellsIntersect(s2index1, s2index2)
 
 - `siIndex1`, `s2index2` — S2 Index. [UInt64](../../../sql-reference/data-types/int-uint.md).
 
-**Returned values**
+**Returned value**
 
-- 1 — If the cells intersect. [UInt8](../../../sql-reference/data-types/int-uint.md).
-- 0 — If the cells don't intersect. [UInt8](../../../sql-reference/data-types/int-uint.md).
+- `1` — If the cells intersect. [UInt8](../../../sql-reference/data-types/int-uint.md).
+- `0` — If the cells don't intersect. [UInt8](../../../sql-reference/data-types/int-uint.md).
 
 **Example**
 
@@ -165,10 +165,10 @@ s2CapContains(center, degrees, point)
 - `degrees` — Radius of the cap in degrees. [Float64](../../../sql-reference/data-types/float.md).
 - `point` — S2 point index. [UInt64](../../../sql-reference/data-types/int-uint.md).
 
-**Returned values**
+**Returned value**
 
-- 1 — If the cap contains the S2 point index. [UInt8](../../../sql-reference/data-types/int-uint.md).
-- 0 — If the cap doesn't contain the S2 point index. [UInt8](../../../sql-reference/data-types/int-uint.md).
+- `1` — If the cap contains the S2 point index. [UInt8](../../../sql-reference/data-types/int-uint.md).
+- `0` — If the cap doesn't contain the S2 point index. [UInt8](../../../sql-reference/data-types/int-uint.md).
 
 **Example**
 
@@ -275,10 +275,10 @@ s2RectContains(s2PointLow, s2PointHi, s2Point)
 - `s2PointHigh` — High S2 point index corresponding to the rectangle. [UInt64](../../../sql-reference/data-types/int-uint.md).
 - `s2Point` — Target S2 point index. [UInt64](../../../sql-reference/data-types/int-uint.md).
 
-**Returned values**
+**Returned value**
 
-- 1 — If the rectangle contains the given S2 point.
-- 0 — If the rectangle doesn't contain the given S2 point.
+- `1` — If the rectangle contains the given S2 point.
+- `0` — If the rectangle doesn't contain the given S2 point.
 
 **Example**
 
