Second pass fix remaining broken links

--- a/docs/en/sql-reference/functions/geo/s2.md
+++ b/docs/en/sql-reference/functions/geo/s2.md
@@ -5,7 +5,7 @@ sidebar_label: S2 Geometry
 
 # Functions for Working with S2 Index
 
-## S2Index {#s2_index}
+## S2Index
 
 [S2](https://s2geometry.io/) is a geographical indexing system where all geographical data is represented on a three-dimensional sphere (similar to a globe).
 
@@ -13,7 +13,7 @@ In the S2 library points are represented as the S2 Index - a specific number whi
 
 ## geoToS2
 
-Returns [S2](#s2_index) point index corresponding to the provided coordinates `(longitude, latitude)`.
+Returns [S2](#s2index) point index corresponding to the provided coordinates `(longitude, latitude)`.
 
 **Syntax**
 
@@ -48,7 +48,7 @@ Result:
 
 ## s2ToGeo
 
-Returns geo coordinates `(longitude, latitude)` corresponding to the provided [S2](#s2_index) point index.
+Returns geo coordinates `(longitude, latitude)` corresponding to the provided [S2](#s2index) point index.
 
 **Syntax**
 
@@ -84,7 +84,7 @@ Result:
 
 ## s2GetNeighbors
 
-Returns S2 neighbor indexes corresponding to the provided [S2](#s2_index). Each cell in the S2 system is a quadrilateral bounded by four geodesics. So, each cell has 4 neighbors.
+Returns S2 neighbor indexes corresponding to the provided [S2](#s2index). Each cell in the S2 system is a quadrilateral bounded by four geodesics. So, each cell has 4 neighbors.
 
 **Syntax**
 
@@ -118,7 +118,7 @@ Result:
 
 ## s2CellsIntersect
 
-Determines if the two provided [S2](#s2_index) cells intersect or not.
+Determines if the two provided [S2](#s2index) cells intersect or not.
 
 **Syntax**
 
