--- a/docs/en/sql-reference/functions/geo/h3.md
+++ b/docs/en/sql-reference/functions/geo/h3.md
@@ -4,7 +4,7 @@ sidebar_label: H3 Indexes
 title: "Functions for Working with H3 Indexes"
 ---
 
-## H3 Index {#h3index}
+## H3 Index
 
 [H3](https://eng.uber.com/h3/) is a geographical indexing system where Earth’s surface divided into a grid of even hexagonal cells. This system is hierarchical, i. e. each hexagon on the top level ("parent") can be split into seven even but smaller ones ("children"), and so on.
 
@@ -18,7 +18,7 @@ The full description of the H3 system is available at [the Uber Engineering site
 
 ## h3IsValid
 
-Verifies whether the number is a valid [H3](#h3index) index.
+Verifies whether the number is a valid [H3](#h3-index) index.
 
 **Syntax**
 
@@ -53,7 +53,7 @@ Result:
 
 ## h3GetResolution
 
-Defines the resolution of the given [H3](#h3index) index.
+Defines the resolution of the given [H3](#h3-index) index.
 
 **Syntax**
 
@@ -88,7 +88,7 @@ Result:
 
 ## h3EdgeAngle
 
-Calculates the average length of the [H3](#h3index) hexagon edge in grades.
+Calculates the average length of the [H3](#h3-index) hexagon edge in grades.
 
 **Syntax**
 
@@ -102,7 +102,7 @@ h3EdgeAngle(resolution)
 
 **Returned values**
 
-- The average length of the [H3](#h3index) hexagon edge in grades. [Float64](../../data-types/float.md).
+- The average length of the [H3](#h3-index) hexagon edge in grades. [Float64](../../data-types/float.md).
 
 **Example**
 
@@ -122,7 +122,7 @@ Result:
 
 ## h3EdgeLengthM
 
-Calculates the average length of the [H3](#h3index) hexagon edge in meters.
+Calculates the average length of the [H3](#h3-index) hexagon edge in meters.
 
 **Syntax**
 
@@ -136,7 +136,7 @@ h3EdgeLengthM(resolution)
 
 **Returned values**
 
-- The average length of the [H3](#h3index) hexagon edge in meters. [Float64](../../data-types/float.md).
+- The average length of the [H3](#h3-index) hexagon edge in meters. [Float64](../../data-types/float.md).
 
 **Example**
 
@@ -156,7 +156,7 @@ Result:
 
 ## h3EdgeLengthKm
 
-Calculates the average length of the [H3](#h3index) hexagon edge in kilometers.
+Calculates the average length of the [H3](#h3-index) hexagon edge in kilometers.
 
 **Syntax**
 
@@ -170,7 +170,7 @@ h3EdgeLengthKm(resolution)
 
 **Returned values**
 
-- The average length of the [H3](#h3index) hexagon edge in kilometers. [Float64](../../data-types/float.md).
+- The average length of the [H3](#h3-index) hexagon edge in kilometers. [Float64](../../data-types/float.md).
 
 **Example**
 
@@ -190,7 +190,7 @@ Result:
 
 ## geoToH3
 
-Returns [H3](#h3index) point index `(lon, lat)` with specified resolution.
+Returns [H3](#h3-index) point index `(lon, lat)` with specified resolution.
 
 **Syntax**
 
@@ -227,7 +227,7 @@ Result:
 
 ## h3ToGeo
 
-Returns the centroid longitude and latitude corresponding to the provided [H3](#h3index) index.
+Returns the centroid longitude and latitude corresponding to the provided [H3](#h3-index) index.
 
 **Syntax**
 
@@ -296,7 +296,7 @@ Result:
 
 ## h3kRing
 
- Lists all the [H3](#h3index) hexagons in the raduis of `k` from the given hexagon in random order.
+ Lists all the [H3](#h3-index) hexagons in the raduis of `k` from the given hexagon in random order.
 
 **Syntax**
 
@@ -337,7 +337,7 @@ Result:
 
 ## h3GetBaseCell
 
-Returns the base cell number of the [H3](#h3index) index.
+Returns the base cell number of the [H3](#h3-index) index.
 
 **Syntax**
 
@@ -439,7 +439,7 @@ Result:
 
 ## h3IndexesAreNeighbors
 
-Returns whether or not the provided [H3](#h3index) indexes are neighbors.
+Returns whether or not the provided [H3](#h3-index) indexes are neighbors.
 
 **Syntax**
 
@@ -475,7 +475,7 @@ Result:
 
 ## h3ToChildren
 
-Returns an array of child indexes for the given [H3](#h3index) index.
+Returns an array of child indexes for the given [H3](#h3-index) index.
 
 **Syntax**
 
@@ -510,7 +510,7 @@ Result:
 
 ## h3ToParent
 
-Returns the parent (coarser) index containing the given [H3](#h3index) index.
+Returns the parent (coarser) index containing the given [H3](#h3-index) index.
 
 **Syntax**
 
@@ -611,7 +611,7 @@ Result:
 
 ## h3GetResolution
 
-Returns the resolution of the [H3](#h3index) index.
+Returns the resolution of the [H3](#h3-index) index.
 
 **Syntax**
 
@@ -645,7 +645,7 @@ Result:
 
 ## h3IsResClassIII
 
-Returns whether [H3](#h3index) index has a resolution with Class III orientation.
+Returns whether [H3](#h3-index) index has a resolution with Class III orientation.
 
 **Syntax**
 
@@ -680,7 +680,7 @@ Result:
 
 ## h3IsPentagon
 
-Returns whether this [H3](#h3index) index represents a pentagonal cell.
+Returns whether this [H3](#h3-index) index represents a pentagonal cell.
 
 **Syntax**
 
@@ -715,7 +715,7 @@ Result:
 
 ## h3GetFaces
 
-Returns icosahedron faces intersected by a given [H3](#h3index) index.
+Returns icosahedron faces intersected by a given [H3](#h3-index) index.
 
 **Syntax**
 
@@ -817,7 +817,7 @@ Result:
 
 ## h3ToCenterChild
 
-Returns the center child (finer) [H3](#h3index) index contained by given [H3](#h3index) at the given resolution.
+Returns the center child (finer) [H3](#h3-index) index contained by given [H3](#h3-index) at the given resolution.
 
 **Syntax**
 
@@ -832,7 +832,7 @@ h3ToCenterChild(index, resolution)
 
 **Returned values**
 
-- [H3](#h3index) index of the center child contained by given [H3](#h3index) at the given resolution. [UInt64](../../data-types/int-uint.md).
+- [H3](#h3-index) index of the center child contained by given [H3](#h3-index) at the given resolution. [UInt64](../../data-types/int-uint.md).
 
 **Example**
 
